<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/dashboardFragment">

    <fragment
        android:id="@+id/dashboardFragment"
        android:name="com.example.dailydose.fragments.DashboardFragment"
        android:label="@string/dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/hydrationFragment"
        android:name="com.example.dailydose.fragments.HydrationFragment"
        android:label="@string/hydration"
        tools:layout="@layout/fragment_hydration" />

    <fragment
        android:id="@+id/moodTrackingFragment"
        android:name="com.example.dailydose.fragments.MoodTrackingFragment"
        android:label="@string/mood_tracking"
        tools:layout="@layout/fragment_mood_tracking" />

    <fragment
        android:id="@+id/analyticsFragment"
        android:name="com.example.dailydose.fragments.AnalyticsFragment"
        android:label="@string/analytics"
        tools:layout="@layout/fragment_analytics" />


    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.dailydose.fragments.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/meditationFragment"
        android:name="com.example.dailydose.fragments.MeditationFragment"
        android:label="@string/meditation"
        tools:layout="@layout/fragment_meditation" />

    <fragment
        android:id="@+id/historyFragment"
        android:name="com.example.dailydose.fragments.HistoryFragment"
        android:label="@string/history"
        tools:layout="@layout/fragment_history" />

</navigation>
